--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,12 @@
   text-decoration: none;
   color: white;
 }
+.privacy-select{
+    padding: 10px;
+    border-radius: 8px;
+    background-color: black !important;
+    color: white;
+}
 @media (max-width: 998px) {
   aside{
    display: none; 
