--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -47,6 +47,9 @@ nav input::placeholder{
 nav ul li{
     list-style: none;
 }
+.nav-link-uppercase{
+    text-transform: uppercase;
+}
 
 nav ul li a{
     padding: 15px;
@@ -65,6 +68,13 @@ nav ul li a{
 }
 
 nav ul li a:hover{
+    list-style: none;
+    transition: 1s;
+    border-top: 2px solid blue;
+    border-left: 2px solid blue;
+    border-right: 2px solid blue;
+}
+.active-platform{
     list-style: none;
     transition: 1s;
     border-top: 2px solid blue;
