feat: Adicionando foto de perfil e modal para escolha de perfil

--- a/src/pages/perfil/Perfil.css
+++ b/src/pages/perfil/Perfil.css
@@ -32,6 +32,16 @@
     background-color: #ff0320b0 !important;
     transition: 0.5s;
 }
+.img-perfil-edit{
+    width: 35%;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.img-perfil-edit-choice{
+    width: 24%;
+    border-radius: 50%;
+    cursor: pointer;
+}
 @media screen and (max-width: 768px){
     .perfil{
         display: block;
